test/parse/expr/bad-getglobal-undefined.txt
;;; ERROR: 1
(module
  (func
    get_global 0
    drop))
(;; STDERR ;;;
out/test/parse/expr/bad-getglobal-undefined.txt:4:16: error: global variable out of range (max 0)
    get_global 0
               ^
;;; STDERR ;;)
